<resources>
    <string name="app_name">MiAmigoTodaro13</string>
    <string name="et_nombre">¿Cuál es tu nombre?</string>
    <string name="boton">Jugar</string>
    <string name="et_vidas">Huesitos</string>
    <string name="jugador_nombre">Jugador:</string>
    <string name="total_score">Score: 0</string>
    <string name="boton_sumar">Comprobar</string>
    <string name="et_respuesta">Respuesta</string>
    <string name="tv_pregunta">Pregunta</string>
    <string name="button_check">Verifica</string>
    <string name="btn_imagenes">Galería</string>
    <string name="btn_quizbanderas">Quiz Imágenes</string>
    <string name="btn_otromenu">Más recursos</string>
    <string name="btn_notas">Notas</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="confirm">Confirmation</string>
    <string name="remove">Remove</string>
    <string name="confirm_message">Are yo sure you want to remove \'%1$s\'?</string>
    <string name="cannot_write">Could\'nt write list</string>
    <string name="cannot_read">could\'nt read list</string>
    <string name="clear_checked">Clear checked items</string>
    <string name="clear_all">Clear all</string>
    <string name="confirm_clear_all">Are you sure you want to clear all items?</string>
</resources>