<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_develoquiz"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="380dp"
        android:layout_height="208dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_develoquiz" />

    <TextView
        android:id="@+id/textView_BestScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="596dp"
        android:background="@drawable/fondobestscore"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.028" />

    <ImageView
        android:id="@+id/imagView_personaje"
        android:layout_width="86dp"
        android:layout_height="73dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fransword" />


    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="340dp"
        android:layout_height="41dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/fondoet"
        android:backgroundTint="@color/facebook_azul"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/et_nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/material_color_botonradio_blancotrans"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:background="@drawable/boton_confirmar"
        android:onClick="Jugar"
        android:text="@string/boton"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/btn_imagenes"
        android:layout_width="160dp"
        android:layout_height="66dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/txt_botonabajoinicio"
        android:text="@string/btn_imagenes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/btn_otromenu"
        android:layout_width="160dp"
        android:layout_height="66dp"
        android:background="@drawable/txt_botonabajoinicio"
        android:text="@string/btn_otromenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_imagenes"
        app:layout_constraintVertical_bias="0.156" />

    <Button
        android:id="@+id/btn_notas"
        android:layout_width="160dp"
        android:layout_height="66dp"
        android:background="@drawable/txt_botonabajoinicio"
        android:text="@string/btn_notas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/btn_otromenu"
        app:layout_constraintTop_toBottomOf="@+id/btn_quizbanderas"
        app:layout_constraintVertical_bias="0.156" />

    <Button
        android:id="@+id/btn_quizbanderas"
        android:layout_width="160dp"
        android:layout_height="66dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/txt_botonabajoinicio"
        android:text="@string/btn_quizbanderas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/btn_imagenes"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>