<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_develoquiz"
    tools:context=".Main2Activity_Nivel1">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.88"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="#000000" />

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/jugador_nombre"
        android:textColor="@color/ic_launcher_background"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/total_score"
        android:textColor="@color/ic_launcher_background"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_huesitos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/et_vidas"
        android:textColor="@color/ic_launcher_background"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nombre" />

    <ImageView
        android:id="@+id/imageView_vidas"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toEndOf="@+id/textView_huesitos"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/craneo3" />

    <TextView
        android:id="@+id/tv_pregunta"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/fondoboton"
        android:gravity="center"
        android:text="@string/tv_pregunta"
        android:textColor="@color/ic_launcher_background"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <RadioGroup
        android:id="@+id/grupo_respuestas"
        android:layout_width="match_parent"
        android:layout_height="373dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pregunta">

        <RadioButton
            android:id="@+id/respuesta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radiobutton1colorselector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="RadioButton"
            android:textColor="@color/ic_launcher_background"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/respuesta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radiobutton2colorselector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="RadioButton"
            android:textColor="@color/ic_launcher_background"
            android:textSize="22sp"
            android:translationY="20dp" />

        <RadioButton
            android:id="@+id/respuesta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radiobutton3colorselector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="RadioButton"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            android:translationY="40dp" />

        <RadioButton
            android:id="@+id/respuesta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radiobutton3colorselector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="RadioButton"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            android:translationY="60dp" />
    </RadioGroup>

    <Button
        android:id="@+id/button_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/grupo_respuestas"
        android:background="@drawable/botonconfirmarrespuesta"
        android:text="@string/button_check"
        android:textColor="@color/ic_launcher_background"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grupo_respuestas"
        app:layout_constraintVertical_bias="0.155" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="88dp"
        android:layout_height="37dp"
        android:background="@drawable/botonabajoinicio"
        android:contentDescription="@string/app_name"
        android:text="Volver"
        android:textColor="@color/colorAccent"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_check"
        app:layout_constraintVertical_bias="0.589" />
</androidx.constraintlayout.widget.ConstraintLayout>